@@ -1,6 +1,7 @@
 {{$NEXT}}
 
   * Change command remove to be less greedy with whitespace (C. Bennett)
+  * Fix loading of Data::Printer for last_actionset debug
 
 2.123300_001 2012-11-25 13:47:15 Europe/London
 
